修改了网站标题

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ a {
   <body>
     <header class="header">
       <nav class="navbar">
-       <h1 class="nav-logo">XING</h1>
+       <h1 class="nav-logo">XING04</h1>
         <ul class="nav-menu">
           <li class="nav-item">
             <a href="https://github.com/" class="nav-link">Github</a>
